--- a/Papers/ICCC-2023/sections/introduction.tex
+++ b/Papers/ICCC-2023/sections/introduction.tex
@@ -2,7 +2,7 @@
 
 
 Compile-time function execution (CTFE) is an aspect of a programming language, that allows the programmer to execute code at compile-time.
-It has been gaining popularity with low level programming languages such as Rust \cite{rust} or C++ \cite{ISO:cpp98}.
+It has been gaining popularity with programming languages without virtual machines such as Rust \cite{rust} or C++ \cite{ISO:cpp98}.
 The goals and capabilities of CTFE depend on the language and are discussed in details in chapter \ref{related-work}.
 
 In this paper a new approach to compiler construction that places Compile Time Function Execution capabilities as the first priority is proposed.
