definitley final version

--- a/Papers/ICCC-2023/sections/design.tex
+++ b/Papers/ICCC-2023/sections/design.tex
@@ -88,9 +88,7 @@ The example presented in Listing \ref{lst:noDiscardCm1}, although very basic, de
 	  ]
   [noDiscard()]
   fn noDiscardFunction() -> usize;
-
-  fn main() -> usize
-  {
+  fn main() -> usize {
 	noDiscardFunction();
 	// error 123: Return value of
 	// a no-discard function is not used
@@ -170,7 +168,7 @@ Therefore, it is impossible for a function to modify a procedure, it depends on.
 Compiler Interface translates the program's intermediate representation into the Backend's assembly language.
 This component is interpreted during compilation.
 
-What is unique about CTFEF is that this part of the compiler can be written in the target language, during Stage 0 of the compiler bootstrapping process, i.e. initial implementation using another language \cite{puntambekar:compiler_design, novillo2007gcc}.
+What is unique about CTFEF is that this part of the compiler can be written in the target language, during initial bootstrapping of the compiler bootstrapping process, i.e. initial implementation using another language \cite{puntambekar:compiler_design, novillo2007gcc}.
 In case of the C-=-1 compiler, C++ was used to implement Frontend, Backend and Interpreter, with Compiler Interface written in C-=-1 \cite{grabski2022compilation}.
 
 Compiler Interface contains a function marked as the Compiler Interface Entry-point.
