--- a/Papers/ENASE-2023/bibliography.bib
+++ b/Papers/ENASE-2023/bibliography.bib
@@ -205,6 +205,14 @@
   urldate = {2021-11-17}
 }
 
+@book{aho2007compilers,
+  title     = {Compilers: principles, techniques, \& tools},
+  author    = {Aho, Alfred V and Lam, Monica S and Sethi, Ravi and Ullman, Jeffrey D},
+  year      = {2007},
+  publisher = {Pearson Education India}
+}
+
+
 @online{csharp:source_generators,
   title   = {Source Generators},
   url     = {https://docs.microsoft.com/en-us/dotnet/csharp/roslyn-sdk/source-generators-overview},
@@ -294,18 +302,24 @@
   urldate = {2020-11-17}
 }
 
-@online{roslyn,
-  title   = {Roslyn},
-  author  = {Dotnet},
-  url     = {github.com/dotnet/roslyn},
-  urldate = {2021-11-12}
+@incollection{roslyn,
+  title     = {.NET Compiler Platform},
+  author    = {Vermeir, Nico},
+  booktitle = {Introducing. NET 6},
+  pages     = {275--295},
+  year      = {2022},
+  publisher = {Springer}
 }
 
-@online{rust,
-  author  = {Rust team},
-  title   = {Rust},
-  url     = {www.rust-lang.org/},
-  urldate = {2021-11-12}
+@article{rust,
+  title     = {The rust language},
+  author    = {Matsakis, Nicholas D and Klock, Felix S},
+  journal   = {ACM SIGAda Ada Letters},
+  volume    = {34},
+  number    = {3},
+  pages     = {103--104},
+  year      = {2014},
+  publisher = {ACM New York, NY, USA}
 }
 
 @article{template_turing_complete,
