--- a/Papers/ENASE-2023/sections/realted-work.tex
+++ b/Papers/ENASE-2023/sections/realted-work.tex
@@ -1,7 +1,7 @@
 \section{Related work}
 \label{related-work}
 
-Many currently used programming languages allow the programmer to execute some code at compile time, for example: C\# \cite{csharp:source_generators,roslyn}, Rust \cite{rust, klabnik2019rust} and C++ \cite{ISO:cpp20}.
+Many currently used programming languages allow the programmer to execute some code at compile time, for example: C\# \cite{slimaksource,roslyn}, Rust \cite{rust,klabnik2019rust} and C++ \cite{ISO:cpp20}.
 
 Rust language compiler is the most similar in capability, to what was demonstrated with C-=-1, as a feature of CTFEF.
 It allows the user to write code that performs some transformations of the program, and interact with the environment during the build process.
