--- a/Papers/FEDCIS-2023/cm1.tex
+++ b/Papers/FEDCIS-2023/cm1.tex
@@ -51,7 +51,7 @@
 		Warsaw Univeristy of Technology\\
 		in Warsaw\\
 		ul.\ Nowowiejska 15/19, 00-665 Warsaw, Poland\\
-		Email: adam.grabski@stud.pw.edu.pl}
+		Email: adam.gr@outlook.com}
 	\and
 	\IEEEauthorblockN{Ilona Bluemke}
 	\IEEEauthorblockA{0000-0002-2894-5976\\
