--- a/Papers/FEDCIS-2023/sections/conclusions.tex
+++ b/Papers/FEDCIS-2023/sections/conclusions.tex
@@ -9,7 +9,7 @@ Authors of language tools do not need to analyze the user program.
 
 On the other hand, using CTFEF approach has some drawbacks. Implementing a compiler is more difficult.
 Since a significant part of the compiler is interpreted, the initial implementation requires working with the target language.
-The lack of available tools, such as integrated development environments, debuggers and libraries makes this part of the process significantly more difficult.
+The lack of available tools, such as integrated development environments, debuggers and libraries, for this new language, makes this part of the process significantly more difficult.
 On the other hand also means the work on the compiler in the target language may start at the very beginning of compiler bootstrapping process\cite{puntambekar:compiler_design, novillo2007gcc}.
 
 The compiler created for C-=-1 has unacceptable performance, as noted by the original C-=-1 paper \cite{grabski2022compilation}.
