--- a/Papers/FEDCIS-2023/sections/realted-work.tex
+++ b/Papers/FEDCIS-2023/sections/realted-work.tex
@@ -34,5 +34,5 @@ Although CTFEF was inspired by the C\# compiler, there are significant differenc
 C\# compiler extensions are separate, compiled, dynamic libraries loaded by the compiler and executed as a regular code.
 In CTFEF components that analyze and generate code are part of regular code base and are not compiled separately.
 The intermediate representation of these modules is interpreted at compile time, together with other parts of compiler, and operate on the same representation of user program.
-CTFEF is further described in chapter \ref{compiler-design}.
+CTFEF is further described in section \ref{compiler-design}.
 
