--- a/Papers/FEDCIS-2023/bibliography.bib
+++ b/Papers/FEDCIS-2023/bibliography.bib
@@ -22,7 +22,8 @@
   title     = {The Rust Programming Language (Covers Rust 2018)},
   author    = {Klabnik, Steve and Nichols, Carol},
   year      = {2019},
-  publisher = {No Starch Press}
+  publisher = {No Starch Press},
+  isbn      = {9781718503106}
 }
 @inproceedings{bunder2019decoupling_lsp,
   title     = {Decoupling Language and Editor-The Impact of the Language Server Protocol on Textual Domain-Specific Languages.},
@@ -67,14 +68,14 @@
   pages      = {7–87},
   numpages   = {81}
 }
-@incollection{vermeir2022net,
+@inproceedings{vermeir2022net,
   title     = {.NET Compiler Platform},
   author    = {Vermeir, Nico},
   booktitle = {Introducing .NET 6},
   pages     = {275--295},
   year      = {2022},
   publisher = {Springer},
-  doi       = {10.1007/978-1-4842-7319-7_10}
+  doi       = {10.1007/978-1-4842-7319-7}
 }
 
 @article{becker2007:type_erasure,
@@ -107,13 +108,14 @@
   numpages  = {3}
 }
 
-@incollection{balliauw2013nuget,
+@inproceedings{balliauw2013nuget,
   title     = {NuGet Package Manager Console PowerShell Reference},
   author    = {Balliauw, Maarten and Decoster, Xavier},
   booktitle = {Pro NuGet},
   pages     = {331--338},
   year      = {2013},
-  publisher = {Springer}
+  publisher = {Springer},
+  doi       = {10.1007/978-1-4302-6002-8\_13}
 }
 
 @mastersthesis{slimaksource,
@@ -221,7 +223,8 @@
   title     = {C\# language specification},
   author    = {Hejlsberg, Anders and Wiltamuth, Scott and Golde, Peter},
   year      = {2003},
-  publisher = {Addison-Wesley Longman Publishing Co., Inc.}
+  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+  isbn      = {978-0-321-15491-0}
 }
 
 
@@ -301,11 +304,16 @@
   urldate = {2021-11-12}
 }
 
-@online{rust,
-  author  = {Rust team},
-  title   = {Rust},
-  url     = {www.rust-lang.org/},
-  urldate = {2021-11-12}
+@article{rust,
+  title     = {The rust language},
+  author    = {Matsakis, Nicholas D and Klock, Felix S},
+  journal   = {ACM SIGAda Ada Letters},
+  volume    = {34},
+  number    = {3},
+  pages     = {103--104},
+  year      = {2014},
+  publisher = {ACM New York, NY, USA},
+  doi       = {10.1145/2692956.2663188}
 }
 
 @article{template_turing_complete,
@@ -319,7 +327,7 @@
   author = {Free Software Foundation},
   note   = {Dostęp zdalny (24.10.2020): \url{https://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html}}
 }
-@techreport{ISO:2012:III,
+@online{ISO:2012:III,
   added-at  = {2012-10-08T01:13:47.000+0200},
   address   = {Geneva, Switzerland},
   author    = {{ISO}},
@@ -446,7 +454,8 @@
   title       = {{Programming languages — C++}},
   volume      = {1998},
   address     = {Geneva, CH},
-  institution = {International Organization for Standardization}
+  institution = {International Organization for Standardization},
+  url         = {https://www.iso.org/standard/25845.html}
 }
 
 @techreport{ISO:cpp20,
@@ -457,7 +466,8 @@
   title       = {{Programming languages — C++}},
   volume      = {2020},
   address     = {Geneva, CH},
-  institution = {International Organization for Standardization}
+  institution = {International Organization for Standardization},
+  url         = {https://www.iso.org/standard/79358.html}
 }
 
 @techreport{ISO:cpp17,
@@ -468,7 +478,8 @@
   title       = {{Programming languages — C++}},
   volume      = {2017},
   address     = {Geneva, CH},
-  institution = {International Organization for Standardization}
+  institution = {International Organization for Standardization},
+  url         = {https://www.iso.org/standard/68564.html}
 }
  @misc{dotnet:method_inlining,
   title   = {Compile-time method inlining · discussion \#1413 · dotnet/csharplang},
