--- a/Papers/FEDCIS-2023/cm1.tex
+++ b/Papers/FEDCIS-2023/cm1.tex
@@ -39,7 +39,7 @@
 \usepackage{listings}
 \lstset{basicstyle=\footnotesize\ttfamily,breaklines=true}
 \lstset{framextopmargin=50pt,frame=bottomline}
-\bibliographystyle{acm}
+\bibliographystyle{IEEEtran}
 
 \begin{document}
 
@@ -49,14 +49,12 @@
 	\IEEEauthorblockN{Adam Grabski}
 	\IEEEauthorblockA{0000-0002-6283-8461\\
 		Warsaw Univeristy of Technology\\
-		in Warsaw\\
 		ul.\ Nowowiejska 15/19, 00-665 Warsaw, Poland\\
 		Email: adam.gr@outlook.com}
 	\and
 	\IEEEauthorblockN{Ilona Bluemke}
 	\IEEEauthorblockA{0000-0002-2894-5976\\
 		Warsaw Univeristy of Technology\\
-		in Warsaw\\
 		ul.\ Nowowiejska 15/19, 00-665 Warsaw, Poland\\
 		Email: Ilona.Bluemke@pw.edu.pl}
 }
