--- a/Papers/FEDCIS-2023/sections/design.tex
+++ b/Papers/FEDCIS-2023/sections/design.tex
@@ -48,7 +48,7 @@ Within this function, the attribute may analyze and modify the code, as well as 
 \begin{minipage}{\linewidth}
 
 	\begin{lstlisting}[
-	  numbers=left,
+	  numbers=right,
 	  firstnumber=0,
 	  caption={noDiscard attribute in C-=-1},
 	  aboveskip=0pt,
